--- a/APBD/app/src/main/res/layout/home.xml
+++ b/APBD/app/src/main/res/layout/home.xml
@@ -104,20 +104,20 @@
     <View
 
         android:id="@+id/group_32"
-        android:layout_width="411dp"
-        android:layout_height="73dp"
+        android:layout_width="440dp"
+        android:layout_height="72dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:background="#26547C"
+        android:onClick="goToPlan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        android:onClick="goToPlan"/>
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -125,13 +125,14 @@
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:onClick="goToSettings"
         app:layout_constraintBottom_toTopOf="@+id/new_transac3"
         app:layout_constraintEnd_toEndOf="@+id/group_32"
-        app:layout_constraintHorizontal_bias="0.934"
+        app:layout_constraintHorizontal_bias="0.902"
         app:layout_constraintStart_toStartOf="@+id/group_32"
         app:layout_constraintTop_toTopOf="@+id/group_32"
-        app:srcCompat="@drawable/settings"
-        android:onClick="goToSettings"/>
+        app:layout_constraintVertical_bias="0.625"
+        app:srcCompat="@drawable/settings" />
 
     <TextView
         android:id="@+id/new_transac3"
@@ -150,22 +151,23 @@
         app:layout_constraintTop_toTopOf="@+id/group_32"
         app:layout_constraintVertical_bias="0.875" />
 
+
+    <!-- Group 5 -->
+
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:onClick="goToHistory"
         app:layout_constraintBottom_toTopOf="@+id/new_transac2"
         app:layout_constraintEnd_toEndOf="@+id/group_32"
-        app:layout_constraintHorizontal_bias="0.745"
+        app:layout_constraintHorizontal_bias="0.721"
         app:layout_constraintStart_toStartOf="@+id/group_32"
         app:layout_constraintTop_toTopOf="@+id/group_32"
-        app:srcCompat="@drawable/wallet"
-        android:onClick="goToHistory"/>
-
-
-    <!-- Group 5 -->
+        app:layout_constraintVertical_bias="0.625"
+        app:srcCompat="@drawable/wallet" />
 
     <TextView
         android:id="@+id/new_transac2"
@@ -180,7 +182,7 @@
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/group_32"
-        app:layout_constraintHorizontal_bias="0.767"
+        app:layout_constraintHorizontal_bias="0.753"
         app:layout_constraintStart_toStartOf="@+id/group_32"
         app:layout_constraintTop_toTopOf="@+id/group_32"
         app:layout_constraintVertical_bias="0.96" />
@@ -191,14 +193,14 @@
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:onClick="alertKonfirmasi"
         app:layout_constraintBottom_toTopOf="@+id/new_transac"
         app:layout_constraintEnd_toEndOf="@+id/group_32"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/group_32"
-        app:layout_constraintVertical_bias="0.666"
-        app:srcCompat="@drawable/add"
-        android:onClick="alertKonfirmasi"/>
+        app:layout_constraintVertical_bias="0.625"
+        app:srcCompat="@drawable/add" />
 
     <TextView
         android:id="@+id/new_transac"
@@ -213,7 +215,7 @@
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="@+id/group_32"
         app:layout_constraintTop_toTopOf="@+id/group_32"
         app:layout_constraintVertical_bias="0.96" />
@@ -242,10 +244,10 @@
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toTopOf="@+id/home2"
         app:layout_constraintEnd_toEndOf="@+id/group_32"
-        app:layout_constraintHorizontal_bias="0.244"
+        app:layout_constraintHorizontal_bias="0.26"
         app:layout_constraintStart_toStartOf="@+id/group_32"
         app:layout_constraintTop_toTopOf="@+id/group_32"
-        app:layout_constraintVertical_bias="0.666"
+        app:layout_constraintVertical_bias="0.625"
         app:srcCompat="@drawable/bookmark" />
 
     <ImageView
@@ -583,10 +585,10 @@
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/group_32"
-        app:layout_constraintHorizontal_bias="0.066"
+        app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="@+id/group_32"
         app:layout_constraintTop_toTopOf="@+id/group_32"
-        app:layout_constraintVertical_bias="0.894" />
+        app:layout_constraintVertical_bias="0.892" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -596,10 +598,12 @@
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toTopOf="@+id/home"
         app:layout_constraintEnd_toEndOf="@+id/group_32"
-        app:layout_constraintHorizontal_bias="0.073"
+        app:layout_constraintHorizontal_bias="0.102"
         app:layout_constraintStart_toStartOf="@+id/group_32"
         app:layout_constraintTop_toTopOf="@+id/group_32"
-        app:srcCompat="@drawable/dashboard" />
+        app:srcCompat="@drawable/dashboard"
+        android:onClick="goToHome"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
