another update for UI and intent

--- a/APBD/app/src/main/res/layout/income.xml
+++ b/APBD/app/src/main/res/layout/income.xml
@@ -153,7 +153,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023"
-        app:srcCompat="@drawable/close_24px" />
+        app:srcCompat="@drawable/close_24px"
+        android:onClick="goToHome"
+        />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
