--- a/APBD/app/src/main/res/layout/expense.xml
+++ b/APBD/app/src/main/res/layout/expense.xml
@@ -418,7 +418,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023"
-        app:srcCompat="@drawable/close_24px" />
+        app:srcCompat="@drawable/close_24px"
+        android:onClick="goToHome"
+        />
 
     <Button
         android:id="@+id/button"
