--- a/APBD/app/src/main/res/layout/planning.xml
+++ b/APBD/app/src/main/res/layout/planning.xml
@@ -569,7 +569,9 @@
         app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.889" />
+        app:layout_constraintVertical_bias="0.889"
+        android:onClick="goToCustomPlan"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
