--- a/APBD/app/src/main/res/layout/planning.xml
+++ b/APBD/app/src/main/res/layout/planning.xml
@@ -256,8 +256,8 @@
 
     <TextView
         android:id="@+id/textView29"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
+        android:layout_width="96dp"
+        android:layout_height="26dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -306,8 +306,8 @@
 
     <TextView
         android:id="@+id/textView33"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
+        android:layout_width="99dp"
+        android:layout_height="28dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -562,7 +562,7 @@
         android:layout_width="112dp"
         android:layout_height="37dp"
         android:backgroundTint="#FFC2B4"
-        android:text="Button"
+        android:text="custom"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
