--- a/APBD/app/src/main/res/layout/custom_plan.xml
+++ b/APBD/app/src/main/res/layout/custom_plan.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#06D6A0"
-    tools:context=".MainActivity">
+    tools:context=".customPlanning">
 
 
     <!-- Planning -->
@@ -41,7 +41,7 @@
     <View
         android:id="@+id/rectangle_9"
         android:layout_width="364dp"
-        android:layout_height="559dp"
+        android:layout_height="527dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -53,7 +53,7 @@
         app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.447" />
+        app:layout_constraintVertical_bias="0.45" />
 
     <View
 
@@ -558,6 +558,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.568" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="112dp"
+        android:layout_height="37dp"
+        android:backgroundTint="#FFC2B4"
+        android:text="save"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.923"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.889"
+        android:onClick="goToPlan"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
