--- a/APBD/app/src/main/res/layout/home.xml
+++ b/APBD/app/src/main/res/layout/home.xml
@@ -111,7 +111,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:background="#26547C"
-        android:onClick="goToPlan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.517"
@@ -244,11 +243,12 @@
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toTopOf="@+id/home2"
         app:layout_constraintEnd_toEndOf="@+id/group_32"
-        app:layout_constraintHorizontal_bias="0.26"
+        app:layout_constraintHorizontal_bias="0.28"
         app:layout_constraintStart_toStartOf="@+id/group_32"
         app:layout_constraintTop_toTopOf="@+id/group_32"
         app:layout_constraintVertical_bias="0.625"
-        app:srcCompat="@drawable/bookmark" />
+        app:srcCompat="@drawable/bookmark"
+        android:onClick="goToPlan"/>
 
     <ImageView
         android:id="@+id/arrow_down1"
@@ -596,14 +596,13 @@
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:onClick="goToHome"
         app:layout_constraintBottom_toTopOf="@+id/home"
         app:layout_constraintEnd_toEndOf="@+id/group_32"
-        app:layout_constraintHorizontal_bias="0.102"
+        app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="@+id/group_32"
         app:layout_constraintTop_toTopOf="@+id/group_32"
-        app:srcCompat="@drawable/dashboard"
-        android:onClick="goToHome"
-        />
+        app:srcCompat="@drawable/dashboard" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
