--- a/APBD/app/src/main/res/layout/settings_page.xml
+++ b/APBD/app/src/main/res/layout/settings_page.xml
@@ -153,7 +153,8 @@
         app:layout_constraintHorizontal_bias="0.125"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.337" />
+        app:layout_constraintVertical_bias="0.337"
+        android:onClick="alertKonfirmasi"/>
 
     <Button
         android:id="@+id/button3"
@@ -196,7 +197,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.799"
         tools:cornerRadius="12"
-        android:onClick="alertKonfirmasi"/>
+        android:onClick="goToHome"/>
 
     <Switch
         android:id="@+id/switch1"
@@ -245,7 +246,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.985"
-        app:srcCompat="@drawable/home_icon" />
+        app:srcCompat="@drawable/home_icon"
+        android:onClick="goToHome"/>
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -258,7 +260,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.985"
-        app:srcCompat="@drawable/new_icon" />
+        app:srcCompat="@drawable/new_icon"
+        android:onClick="alertIncomeExpense"/>
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -272,7 +275,8 @@
         app:layout_constraintStart_toStartOf="@+id/textView41"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.989"
-        app:srcCompat="@drawable/plan_icon" />
+        app:srcCompat="@drawable/plan_icon"
+        android:onClick="goToPlan"/>
 
     <ImageButton
         android:id="@+id/imageButton4"
@@ -285,7 +289,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.985"
-        app:srcCompat="@drawable/settings_icon" />
+        app:srcCompat="@drawable/settings_icon"
+        android:onClick="goToSettings"/>
 
     <ImageButton
         android:id="@+id/imageButton5"
@@ -298,7 +303,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.986"
-        app:srcCompat="@drawable/history_icon" />
+        app:srcCompat="@drawable/history_icon"
+        android:onClick="goToHistory"/>
 
     <TextView
         android:id="@+id/textView7"
