--- a/APBD/app/src/main/res/layout/custom_plan.xml
+++ b/APBD/app/src/main/res/layout/custom_plan.xml
@@ -34,14 +34,15 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.048" />
+        app:layout_constraintVertical_bias="0.041" />
 
     <View
         android:id="@+id/rectangle_9"
         android:layout_width="364dp"
-        android:layout_height="527dp"
+        android:layout_height="542dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
