--- a/APBD/app/src/main/res/layout-land/login_page.xml
+++ b/APBD/app/src/main/res/layout-land/login_page.xml
@@ -8,62 +8,19 @@
     android:background="#06D6A0"
     tools:context=".LoginPage">
 
-    <Button
-        android:id="@+id/buttonRegister2"
-        android:layout_width="228dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="88dp"
-        android:backgroundTint="#004D8A"
-        android:drawableTint="@color/white"
-        android:scrollbarThumbHorizontal="@color/white"
-        android:scrollbarThumbVertical="@color/white"
-        android:text="Sign in with Google"
-        android:textColor="#000000"
-        android:textColorHighlight="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterGoogle"
+    <EditText
+        android:id="@+id/editTextTextPassword"
+        android:layout_width="314dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="40dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textColorHint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/buttonRegister2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:rippleColor="@color/white"
-        tools:cornerRadius="12" />
-
-    <Button
-        android:id="@+id/buttonRegisterGoogle"
-        android:layout_width="231dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="84dp"
-        android:backgroundTint="#FFE500"
-        android:drawableTint="@color/white"
-        android:scrollbarThumbHorizontal="@color/white"
-        android:scrollbarThumbVertical="@color/white"
-        android:text="Register"
-        android:textColor="#000000"
-        android:textColorHighlight="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:rippleColor="@color/white"
-        tools:cornerRadius="12"
-        android:onClick="goToRegis"/>
-
-    <Button
-        android:id="@+id/buttonRegisterGoogle2"
-        android:layout_width="231dp"
-        android:layout_height="50dp"
-        android:backgroundTint="@color/white"
-        android:drawableTint="@color/white"
-        android:scrollbarThumbHorizontal="@color/white"
-        android:scrollbarThumbVertical="@color/white"
-        android:text="Login"
-        android:textColor="#000000"
-        android:textColorHighlight="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterGoogle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonRegister2"
-        app:rippleColor="@color/white"
-        android:onClick="goToHome"
-        tools:cornerRadius="12" />
+        app:layout_constraintHorizontal_bias="0.479"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textViewLogin"
@@ -75,31 +32,16 @@
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.56" />
+        app:layout_constraintVertical_bias="0.687" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="314dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="88dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/buttonRegister2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        style=""
         android:id="@+id/editTextTextEmailAddress"
+        style=""
         android:layout_width="312dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="12dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -107,6 +49,67 @@
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonRegister2"
+        android:layout_width="228dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="60dp"
+        android:backgroundTint="#004D8A"
+        android:drawableTint="@color/white"
+        android:scrollbarThumbHorizontal="@color/white"
+        android:scrollbarThumbVertical="@color/white"
+        android:text="Sign in with Google"
+        android:textColor="#000000"
+        android:textColorHighlight="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterGoogle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:rippleColor="@color/white"
+        tools:cornerRadius="12" />
+
+    <Button
+        android:id="@+id/buttonRegisterGoogle"
+        android:layout_width="231dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="4dp"
+        android:backgroundTint="#FFE500"
+        android:drawableTint="@color/white"
+        android:onClick="goToRegis"
+        android:scrollbarThumbHorizontal="@color/white"
+        android:scrollbarThumbVertical="@color/white"
+        android:text="Register"
+        android:textColor="#000000"
+        android:textColorHighlight="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:rippleColor="@color/white"
+        tools:cornerRadius="12" />
+
+    <Button
+        android:id="@+id/buttonRegisterGoogle2"
+        android:layout_width="231dp"
+        android:layout_height="50dp"
+        android:backgroundTint="@color/white"
+        android:drawableTint="@color/white"
+        android:onClick="goToHome"
+        android:scrollbarThumbHorizontal="@color/white"
+        android:scrollbarThumbVertical="@color/white"
+        android:text="Login"
+        android:textColor="#000000"
+        android:textColorHighlight="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterGoogle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonRegister2"
+        app:layout_constraintVertical_bias="0.0"
+        app:rippleColor="@color/white"
+        tools:cornerRadius="12" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
