--- a/APBD/app/src/main/res/layout/boot_up.xml
+++ b/APBD/app/src/main/res/layout/boot_up.xml
@@ -79,7 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:rippleColor="@color/white"
         tools:cornerRadius="12"
-        android:onClick="showToast"
+        android:onClick="goToLogin"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
