--- a/APBD/app/src/main/res/layout-land/login_page.xml
+++ b/APBD/app/src/main/res/layout-land/login_page.xml
@@ -41,9 +41,8 @@
         style=""
         android:layout_width="312dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="28dp"
         android:ems="10"
-        android:hint="Email"
         android:inputType="textEmailAddress"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -90,6 +89,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:rippleColor="@color/white"
         tools:cornerRadius="12" />
+
+    <TextView
+        android:id="@+id/EmailValidation"
+        android:layout_width="167dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="8dp"
+        android:ems="10"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.354"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonRegisterGoogle2"
