--- a/APBD/app/src/main/res/layout/login_page.xml
+++ b/APBD/app/src/main/res/layout/login_page.xml
@@ -101,6 +101,7 @@
         android:layout_height="47dp"
         android:layout_marginBottom="28dp"
         android:ems="10"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
