--- a/APBD/app/src/main/res/layout/register_otpcode.xml
+++ b/APBD/app/src/main/res/layout/register_otpcode.xml
@@ -33,6 +33,9 @@
         android:layout_height="58dp"
         android:ems="10"
         android:inputType="number"
+        android:maxLength="4"
+        android:textAlignment="center"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
