--- a/APBD/app/src/main/res/layout/settings_page.xml
+++ b/APBD/app/src/main/res/layout/settings_page.xml
@@ -171,9 +171,10 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="93dp"
-        android:layout_height="35dp"
+        android:layout_width="103dp"
+        android:layout_height="36dp"
         android:backgroundTint="#06D6A0"
+        android:onClick="alertKonfirmasi"
         android:text="Logout"
         android:textColor="#5C5C5C"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -181,8 +182,7 @@
         app:layout_constraintHorizontal_bias="0.125"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.337"
-        android:onClick="alertKonfirmasi"/>
+        app:layout_constraintVertical_bias="0.337" />
 
     <Button
         android:id="@+id/button3"
@@ -193,10 +193,10 @@
         android:textColor="#5C5C5C"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.166"
+        app:layout_constraintHorizontal_bias="0.132"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.958" />
+        app:layout_constraintVertical_bias="0.974" />
 
     <TextView
         android:id="@+id/textView6"
