--- a/APBD/app/src/main/res/menu/menu_overflow.xml
+++ b/APBD/app/src/main/res/menu/menu_overflow.xml
@@ -7,4 +7,7 @@
     <item
         android:id="@+id/Contact"
         android:title="Contact"/>
+    <item
+        android:id="@+id/Calculate"
+        android:title="Try To Calculate"/>
 </menu>
